# uKanren_translator

./: .gitattributes  .gitignore  README.md  annotationAlgo.md  ktrans.cabal  stack.yaml
app/: Main.hs
app/tmp/: Main.hs
bta/: EngTitle.tex  IEEEbib.bib  SEIM-2020.aux  SEIM-2020.bbl  SEIM-2020.blg  SEIM-2020.fdb_latexmk  SEIM-2020.fls  SEIM-2020.out  SEIM-2020.tex
bta/SEIM-preso/: beamerthemeSPbAU.sty  preso.tex
resources/: 1.hs  Peano.hs  append.hs  appendo.hs  bool  extra  intersectDisj  list  mkappendo  num  permSort  prog.hs  programs
resources/future/: bool  list  num  programs  restlist  restnum  restprograms
resources/past/: appendo.hs  mkappendo
src/: AFSyntax.hs  Annotatation.hs  Annotation.hs  Init.hs  MKSyntax.hs  Parser.hs  Syntax.hs  Translator.hs
src/Annotator/: Main.hs  Types.hs
src/Annotator/Internal/: Core.hs  Gen.hs  InvokeNormalization.hs  Lib.hs  Normalization.hs  Stack.hs  Types.hs
src/Lib/: Generator.hs  Peano.hs
test/: Appendo.hs  AppendoCtorUnif.hs  DoubleAppendo.hs  PermSort.hs  Res.hs  Revacco.hs  Reverso.hs  Spec.hs
test/tmp/: Res.hs  Spec.hs
thesis/: main.tex  spbau-diploma.cls
thesis/contents/: appendices.tex  bibfile.bib  head.tex  intro.tex  outro.tex
thesis/contents/chapter1/: bta.tex  goal.tex  goals.tex  haskell.tex  main.tex  minikanren.tex  translation.tex
thesis/contents/chapter2/: bta.tex  core.tex  correctness.tex  ex.tex  main.tex  minikanren.tex  norm.tex  translation.tex  upd.tex
thesis/contents/chapter3/: algo.tex  ast.tex  bta.tex  core.tex  coreUpd.tex  correctness.tex  ex.tex  main.tex  mkproblems.tex  norm.tex  semantics.tex  (+2 more)
thesis/figures/: diagram.drawio
(+15 files in other folders)
