name:           ktrans
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Pluralia/uKanren_translator/#readme>
homepage:       https://github.com/Pluralia/uKanren_translator/#readme
bug-reports:    https://github.com/Pluralia/uKanren_translator/issues
author:         pluralia
maintainer:     irina-pluralia@rambler.ru
copyright:      2020 Pluralia
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
cabal-version: 1.12

source-repository head
  type: git
  location: https://github.com/Pluralia/uKanren_translator


library
  exposed-modules:
      Annotation
    , Parser
    , AFSyntax
    , Translator
  other-modules:
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , bifunctors >=5.5 && <5.6
    , containers >=0.6 && <0.7
    , megaparsec >=7.0 && <7.1
    , parser-combinators >=1.0 && <1.1
    , uKanren-transformation
  default-language: Haskell2010

executable ktrans
  main-is: Main.hs
  other-modules:
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , ktrans >=0.1 && <0.2
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , containers >=0.6 && <0.7
    , hspec >=2.7 && <2.8
    , uKanren-transformation 
    , ktrans >= 0.1 && <0.2 
  default-language: Haskell2010

